--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/news
+spring.datasource.username=postgres
+spring.datasource.password=123
 
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
