--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/news
 spring.datasource.username=postgres
 spring.datasource.password=123
 
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-binding-errors=always
