--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-binding-errors=always
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
